--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 body {
   background-color: #202124;
+  margin: 0;
 }
 
 header {
@@ -11,7 +12,7 @@ header {
 }
 header a {
   color: white;
-  font-family: Arial;
+  font-family: arial, sans-serif;
   font-size: 13px;
   text-decoration: none;
   display: inline-block;
@@ -21,6 +22,9 @@ header a {
 }
 header a img {
   vertical-align: middle;
+}
+header a img:hover {
+  background-color: rgba(232, 234, 237, 0.08);
 }
 header a:hover {
   text-decoration: underline;
@@ -82,7 +86,7 @@ header a:hover {
 }
 #text_area #text_area_inner:hover {
   background-color: #303134 !important;
-  border: none !important;
+  border: 1px solid #303134 !important;
 }
 #text_area input {
   background-color: transparent;
@@ -91,6 +95,77 @@ header a:hover {
   outline: none;
   color: white;
   caret-color: white;
+}
+
+#form_submit {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+}
+#form_submit input {
+  font-family: arial, sans-serif;
+  font-size: 14px;
+  color: white;
+  background-color: #303134;
+  border: 1px solid #303134;
+  height: 36px;
+  min-width: 54px;
+  padding: 0 16px;
+  border-radius: 4px;
+}
+#form_submit input:hover {
+  border: 1px solid #5f6368;
+}
+
+#language {
+  display: flex;
+  justify-content: center;
+  color: #bdc1c6;
+  font-size: small;
+  font-family: arial, sans-serif;
+  margin-top: 10px;
+}
+#language a {
+  color: #8ab4f8;
+  text-decoration: none;
+}
+#language a:hover {
+  text-decoration: underline;
+}
+
+footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 97px;
+  background-color: #171717;
+  margin: 0;
+}
+footer #location {
+  border-bottom: 1px solid #3c4043;
+  height: 49px;
+}
+footer #location div {
+  padding: 15px 30px;
+  font-size: 15px;
+  color: #e8eaed;
+}
+footer #footer_links {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  height: 47px;
+}
+footer #footer_links a {
+  text-decoration: none;
+  color: #e8eaed;
+  font-family: arial, sans-serif;
+  padding: 15px;
+  font-size: 14px;
+}
+footer #footer_links a:hover {
+  text-decoration: underline;
 }
 
 /*# sourceMappingURL=styles.css.map */
