--- a/styles.scss
+++ b/styles.scss
@@ -1,5 +1,7 @@
 body {
     background-color: #202124;
+    margin: 0;
+    font-family: arial, sans-serif;
 }
 
 header {
@@ -10,7 +12,6 @@ header {
     margin-left: -15px;
     a {
         color: white;
-        font-family: Arial;
         font-size: 13px;
         text-decoration: none;
         display: inline-block;
@@ -82,7 +83,7 @@ header {
     }
     #text_area_inner:hover {
         background-color: #303134 !important;
-        border: none !important;
+        border: 1px solid #303134 !important;
     }
 
     input{
@@ -93,8 +94,74 @@ header {
         color: white;
         caret-color: white;
     }
+}
 
-    #form_submit {
-        display: none;
+#form_submit {
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+    input {
+        cursor: pointer;
+        font-family: Arial, sans-serif;
+        font-size: 14px;
+        color: white;
+        background-color: #303134;
+        border: 1px solid #303134;
+        height: 36px;
+        min-width: 54px;
+        padding: 0 16px;
+        border-radius: 4px;
+    }
+    input:hover {
+        border: 1px solid #5f6368;
+    }
+}
+
+#language {
+    display: flex;
+    justify-content: center;
+    color: #bdc1c6;
+    font-size: small;
+    margin-top: 10px;
+    a {
+        color: #8ab4f8;
+        text-decoration: none;
+    }
+    a:hover {
+        text-decoration: underline;
+    }
+}
+
+footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 97px;
+    background-color: #171717;
+    margin: 0;
+    #location {
+        border-bottom: 1px solid #3c4043;
+        height: 49px;
+        div {
+            padding: 15px 30px;
+            font-size: 15px;
+            color: #e8eaed;
+        }
+    }
+    #footer_links {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        align-items: center;
+        height: 47px;
+        a {
+            text-decoration: none;
+            color: #e8eaed;
+            padding: 15px;
+            font-size: 14px;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
     }
 }
