--- a/styles.scss
+++ b/styles.scss
@@ -41,6 +41,11 @@ header {
     flex-direction: column;
     align-items: center;
     margin-top: 20%;
+    #images_text {
+        color: #4487f6;
+        margin-left: 220px;
+        margin-top: -20px;
+    }
 }
 
 #text_area {
@@ -79,6 +84,10 @@ header {
         #svg_div {
             display: flex;
             margin-left: auto;
+        }
+        #magnifying {
+            fill: #8ab4f8;
+            filter: none;
         }
     }
     #text_area_inner:hover {
