--- a/advanced.scss
+++ b/advanced.scss
@@ -20,12 +20,21 @@ header {
 
 #top_bar {
     display: flex;
+    flex-direction: row;
     justify-content: space-between;
 }
 
 #right_corner {
+    display: flex;
+    align-items: center;
     a {
         padding-left: 10px;
+        text-decoration: none;
+        color: #4d5156;
+        font-size: 14px;
+    }
+    a:hover {
+        text-decoration: underline;
     }
 }
 
